src/index.css
/* ... */
.hero-img-home {
    background-image: url("/home/herobanner.jpg");
}

.hero-img-fuglinod {
    background-image: url("/fuglinod/herobanner.jpg");
}

.hero-img-fugleforing {
    background-image: url("/fugleforing/herobanner.jpg");
}

.hero-img-omoss {
    background-image: url("/omoss/herobanner.jpg");
}

.hero-img-blifrivillig {
    background-image: url("/blifrivillig/herobanner.jpg");
}

.hero-img-stottoss {
    background-image: url("/stottoss/herobanner.jpg");
}

.hero-circle-wrapper {
    overflow: hidden;
    height: 828px;
}

.hero-circle {
    background-color: transparent;
    border: 18px solid var(--primary-white);
    border-radius: 100%;
    height: 1024px;
    width: 1024px;
    position: relative;
    top: 252px;
    right: 284px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.circle-movement {
    top: 356px;
    right: 336px;
}

.hero-inner-circle {
    background-color: var(--primary-green);
    height: 988px;
    width: 988px;
    border-radius: 100%;
    border: 6px solid var(--primary-white);
}

.hero-text {
    position: absolute;
    right: 148px;
    top: 112px;
}

.alt-movement {
    right: 156px;
    top: 122px;
    width: 482px;
}

.hero-h1 {
    font-family: Georgia, "Times New Roman", Times, serif;
    font-weight: bold;
    font-size: 57px;
    margin-bottom: 12px;
    color: var(--primary-white);
}

.hero-p,
.hero-p a {
    font-size: 24px;
    color: var(--primary-white);
    transition: 0.3s;
    line-height: 130%;
}

.alt-text,
.alt-text a {
    font-size: 30px;
}

a {
    text-decoration: 1px underline;
}

button {
    font-family: AvenirNextBold, sans-serif;
    font-size: 19px;
    color: var(--primary-white);
    background-color: var(--button);
    cursor: pointer;
    transition: all 0.2s;
    padding: 7px 28px;
    border: none;
    border-radius: 0 20px 0 20px;
}

.hero-text button {
    font-size: 24px;
    margin-top: 40px;
    padding: 22px 48px;
    border-radius: 0 48px 0 48px;
}

.centered {
    text-align: center;
    align-self: center;
}

.filler {
    width: 100%;
}

.other-orgs {
    width: 100%;
    padding: 0;
}

.other-orgs h1 span {
    display: none;
}

.white-div {
    background-color: var(--background-white);
    display: flex;
    justify-content: center;
}

.green-div {
    background-color: var(--primary-green);
    max-width: 1440px;
    display: flex;
    justify-content: center;
    margin: 0 auto;
    border-radius: 0 0 20px 20px;
}

.main-div-box {
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1320px;
    gap: 64px;
    margin: 160px 60px;
}

.main-div-textbox {
    max-width: 54%;
}

.main-div-textbox h1 span {
    display: none;
}

.right-side {
    display: flex;
    justify-content: flex-end;
}

.right-side button {
    background-color: var(--primary-green);
    padding: 14px 32px;
    margin-top: 24px;
    border-radius: 0 32px 0 32px;
}

.main-div-box button {
    background-color: var(--primary-green);
    padding: 14px 40px;
    margin-top: 32px;
    border-radius: 0 32px 0 32px;
}

.greentext {
    color: var(--primary-green);
}

.orangetext {
    color: var(--button);
}

.orangetext li {
    margin: 48px 0;
}

.p-demi-orange {
    color: var(--button);
    font-family: AvenirNextDemiBold;
}

.blacktext {
    color: var(--primary-font);
}

.bigger-text {
    font-size: 30px;
}

.nodeco {
    text-decoration: none;
}

.offwhite-div {
    background-color: var(--primary-white);
    display: flex;
    justify-content: center;
}

.offwhite-div a,
.offwhite-div p {
    transition: 0.3s;
}

.rehab-fugler {
    display: flex;
    gap: 32px;
    margin-top: 48px;
}

.rehab-fugler-box {
    display: flex;
    flex-direction: column;
    width: 400px;
    border-radius: 20px;
    cursor: pointer;
    transition: 0.3s;
    text-decoration: none;
}

.rehab-fugler-img {
    border-radius: 20px 20px 0 0;
    contain: content;
    margin-bottom: -4px;
}

.rehab-fugler-text {
    display: flex;
    flex-direction: column;
    background-color: var(--background-white);
    padding: 14px 24px 36px 24px;
    width: auto;
    border-radius: 0 0 20px 20px;
}

.rehab-fugler-text h2 {
    margin: 0;
    padding-bottom: 8px;
}

.rehab-fugler-text p {
    color: var(--primary-font);
}

.stott-inline {
    display: inline;
}

#support-highlight {
    color: var(--button);
    font-family: AvenirNextDemiBold;
}

#support-member {
    text-decoration: none;
    font-family: AvenirNextDemiBold;
    color: var(--button);
    transition: 0.3s;
}

#stott-bold {
    font-family: AvenirNextBold;
    color: var(--primary-font);
}

li {
    font-family: AvenirNext;
    font-size: 24px;
}

li a {
    color: var(--primary-font);
    text-decoration: none;
    transition: 0.3s;
}

.quicknavbox {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 1320px;
    padding: 16px 0;
}

.quicknavbox p {
    color: var(--primary-green);
    font-family: AvenirNextDemiBold;
    margin-bottom: 16px;
}

.quicknav a {
    color: var(--primary-green);
    font-family: AvenirNext;
    font-size: 24px;
    text-decoration: none;
    transition: color 0.2s;
}

.quicknav a.active {
    color: var(--button);
}

.quicknav {
    display: flex;
    width: 97%;
    justify-content: space-between;
}

.sidebyside {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 32px;
}

.sub-div-box {
    padding: 80px 60px;
    max-width: 1320px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 64px;
}

.sub-div-text {
    width: 57%;
}

.spacer {
    padding: 80px 0;
}

.med-spacer {
    padding: 40px 0;
}

.foringstabell {
    max-width: 100%;
    margin-bottom: 80px;
}

.desktop-visible {
    display: block;
    letter-spacing: 0.5px;
}

.mobile-visible {
    display: none;
}
/* ... */

